[package]
name = "yew-feather"
version = "1.0.0"
authors = [
    "Pedro Ferreira <me.pedro.ferreira@gmail.com>",
    "Martin Molzer <ga65guy@mytum.de>",
]
categories = ["wasm", "web-programming"]
keywords = ["wasm", "yew", "feather"]
description = "Yew components for Feather icons"
license = "MIT"
readme = "./README.md"
repository = "https://github.com/pedrodesu/yew-feather.git"
homepage = "https://github.com/pedrodesu/yew-feather"
documentation = "https://github.com/pedrodesu/yew-feather"
edition = "2021"
include = ["/src"]

[lib]
path = "src/lib.rs"

[dependencies]
yew = "0.20.0"

[build-dependencies]
which = "4.3.0"
serde_json = "1.0.91"
convert_case = "0.6.0"
